testportal/service .yml
apiVersion: v1
kind: Service
metadata:
  #annotations:
  #  service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  name: walletdoc-portal
spec:
  selector:
    app: walletdoc-portal
  ports:
    - port: 80
      protocol: TCP
  type: LoadBalancer
