testportal/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walletdoc-portal1
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: star-walletdoc-tech
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
spec:
  rules:
  - host: testportal.walletdoc.tech
    http:
      paths:
      - path: /
        backend:
          service:
            name: walletdoc-portal1
            port:
              number: 80
        pathType: Prefix
  - host: testportal1.walletdoc.tech  # Separate hostname for /testportal1
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx-service
            port:
              number: 80
        pathType: Prefix 


---

apiVersion: v1
kind: Service
metadata:
  #annotations:
  #  service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  name: walletdoc-portal1
spec:
  selector:
    app: walletdoc-portal1
  ports:
    - port: 80
      protocol: TCP
  type: LoadBalancer

---

apiVersion : apps/v1
kind: Deployment
metadata:
  name: walletdoc-portal1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walletdoc-portal1
  template:
    metadata:
      labels:
        app: walletdoc-portal1
    spec:
      containers:
        - name: walletdoc-portal1
          image: redis
          ports:
          - containerPort: 80
            protocol: TCP
          livenessProbe: # Liveness probe for application health
            httpGet:
              path: /  # Check the health endpoint at /health
              port: 80  # Same port as the container port
            initialDelaySeconds: 15  # Wait 15 seconds before starting the probe
            periodSeconds: 20  # Repeat the probe every 20 seconds
            timeoutSeconds: 5  # Fail the probe if it doesn't respond within 5 seconds
            failureThreshold: 3  # Consider the container unhealthy after 3 consecutive failures

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        livenessProbe: # Liveness probe for application health
          httpGet:
            path: /  # Check the health endpoint at /health
            port: 80  # Same port as the container port
          initialDelaySeconds: 15  # Wait 15 seconds before starting the probe
          periodSeconds: 20  # Repeat the probe every 20 seconds
          timeoutSeconds: 5  # Fail the probe if it doesn't respond within 5 seconds
          failureThreshold: 3  # Consider the container unhealthy after 3 consecutive failures
